Hbox no longer covers other blocks, homogenous sections now render properly

--- a/src/Components/common.scss
+++ b/src/Components/common.scss
@@ -320,6 +320,7 @@ $day_divider_size : 1.5px;
 		min-width: 0;
 	
 		border-radius: 3px;
+		z-index: 1;
 
 		transition: all 0.2s ease-in-out;
 		// transition: position 0.01s ease-in-out 1s;
